internal seo and ui improvements

--- a/assets/languages/locales/de/translation.json
+++ b/assets/languages/locales/de/translation.json
@@ -330,6 +330,22 @@
     "next": "Weiter"
   },
   "entdecken": {
+    "includeCopies": "Kopierte Module einbeziehen",
+    "includeCopiesYes": "Mit kopierten Modulen",
+    "includeCopiesNo": "Ohne kopierte Module",
+    "questions": "Fragen",
+    "minimumQuestionsAmount": "Minimale Fragenanzahl",
+    "textSearchType": "Text-Suchtyp",
+    "name": "Name",
+    "description": "Beschreibung",
+    "creator": "Ersteller",
+    "moreFilters": "Mehr Filter",
+    "educationGoal": "Bildungsziel",
+    "fieldOfStudy": "Studiengang",
+    "schooltype": "Schulform",
+    "schoolGrade": "Schulklasse",
+    "educationCategory": "Ausbildungskategorie",
+    "educationField": "Ausbildungsfach",
     "title": "Entdecken",
     "university": "Universität",
     "school": "Schule",
