--- a/assets/languages/locales/en/translation.json
+++ b/assets/languages/locales/en/translation.json
@@ -329,6 +329,22 @@
     "next": "Next"
   },
   "entdecken": {
+    "includeCopies": "Include copied modules in search",
+    "includeCopiesYes": "Include copied modules",
+    "includeCopiesNo": "Only original modules",
+    "questions": "questions",
+    "minimumQuestionsAmount": "Minimum number of questions",
+    "textSearchType": "Search by",
+    "name": "Name",
+    "description": "Description",
+    "creator": "Creator",
+    "moreFilters": "More Filters",
+    "educationGoal": "Degree Goal",
+    "fieldOfStudy": "Field of Study",
+    "schooltype":  "School Type",
+    "schoolGrade": "Grade",
+    "educationCategory": "Education Category",
+    "educationField": "Education Field",
     "title": "Discover",
     "university": "University",
     "school": "School",
