--- a/assets/languages/locales/es/translation.json
+++ b/assets/languages/locales/es/translation.json
@@ -330,6 +330,22 @@
     "next": "Siguiente"
   },
   "entdecken": {
+    "includeCopies": "Incluir módulos copiados",
+    "includeCopiesYes": "Incluir módulos copiados",
+    "includeCopiesNo": "No incluir módulos copiados",
+    "questions": "preguntas",
+    "minimumQuestionsAmount": "Cantidad mínima de preguntas",
+    "textSearchType": "Tipo de búsqueda de texto",
+    "name": "Nombre",
+    "description": "Descripción",
+    "creator": "Creador",
+    "moreFilters": "Más filtros",
+    "educationGoal": "Meta de titulación",
+    "fieldOfStudy": "Campo de estudio",
+    "schooltype": "Tipo de escuela",
+    "schoolGrade": "Curso escolar",
+    "educationCategory": "Categoría educativa",
+    "educationField": "Campo educativo",
     "title": "Descubrir",
     "university": "Universidad",
     "school": "Escuela",
