--- a/assets/languages/locales/fra/translation.json
+++ b/assets/languages/locales/fra/translation.json
@@ -331,6 +331,22 @@
     "next": "Suivant"
   },
   "entdecken": {
+    "includeCopies": "Inclure les modules copiés",
+    "includeCopiesYes": "Inclure les modules copiés",
+    "includeCopiesNo": "Exclure les modules copiés",
+    "questions": "questions",
+    "minimumQuestionsAmount": "Nombre minimum de questions",
+    "textSearchType": "Type de recherche de texte",
+    "name": "Nom",
+    "description": "Description",
+    "creator": "Créateur",
+    "moreFilters": "Plus de filtres",
+    "educationGoal": "Objectif de diplôme",
+    "fieldOfStudy": "Domaine d’études",
+    "schooltype": "Type d’école",
+    "schoolGrade": "Classe",
+    "educationCategory": "Catégorie de formation",
+    "educationField": "Domaine de formation",
     "title": "Découvrir",
     "university": "Université",
     "school": "École",
