--- a/assets/languages/locales/en/translation.json
+++ b/assets/languages/locales/en/translation.json
@@ -13,6 +13,7 @@
     "errorMessage": "Please fill out all fields."
   },
   "info": {
+    "thisOnlyWorksIfYouAreOnline": "This feature only works if you are online.",
     "title": "Terms & Conditions",
     "policys": {
       "usageRights": {
