Task: The App should work offline Step 2: Navigation through last Sessions and Custom Quiz Settings

--- a/assets/languages/locales/en/translation.json
+++ b/assets/languages/locales/en/translation.json
@@ -1726,6 +1726,7 @@
     }
   },
   "bibliothek": {
+    "notEnoughQuestionsToStart": "Not enough questions to start a quiz.",
     "wouldYouLikeToAddModule": "Would you like to add the module {{moduleName}} to your library?",
     "addModule": "Add module",
     "doNotAdd": "Do not add",
