--- a/assets/languages/locales/de/translation.json
+++ b/assets/languages/locales/de/translation.json
@@ -1681,7 +1681,7 @@
   },
 
   "bibliothek": {
-
+    "notEnoughQuestionsToStart": "Nicht genügend Fragen, um das Quiz zu starten.",
     "wouldYouLikeToAddModule": "Möchtest du das Modul {{moduleName}} zu deiner Bibliothek hinzufügen?",
     "addModule": "Modul hinzufügen",
     "doNotAdd": "Nicht hinzufügen",
