--- a/assets/languages/locales/es/translation.json
+++ b/assets/languages/locales/es/translation.json
@@ -1813,6 +1813,7 @@
     }
   },
   "bibliothek": {
+    "notEnoughQuestionsToStart": "No hay suficientes preguntas para iniciar un cuestionario.",
     "wouldYouLikeToAddModule": "¿Te gustaría añadir el módulo {{moduleName}} a tu biblioteca?",
 "addModule": "Añadir módulo",
 "doNotAdd": "No añadir",
