Task: The App should work offline. Step 3: User Usage Integration

--- a/assets/languages/locales/de/translation.json
+++ b/assets/languages/locales/de/translation.json
@@ -472,6 +472,7 @@
     "numberOfAnswers": "Anzahl der Antworten"
   },
   "profileSettings": {
+    "goOnlineToEdit": "Gehe online, um deine Bildungsziele zu bearbeiten.",
     "validationCode": "Bestätigungscode",
     "verify": "Bestätigen",
     "invalidCode": "Ungültiger Aktioncode.",
