Reactivation of upload Document

--- a/assets/languages/locales/de/translation.json
+++ b/assets/languages/locales/de/translation.json
@@ -536,6 +536,7 @@
       "nothingForMe": "Nichts für mich dabei"
   },
   "singleModule": {
+    "onlyPdfSupported": "Derzeit werden nur PDF-Dateien unterstützt.",
     "recommended": "Empfohlen",
     "generateModuleFor": "Modul generieren für",
     "energy": "Energie"
