--- a/assets/languages/locales/fra/translation.json
+++ b/assets/languages/locales/fra/translation.json
@@ -539,6 +539,7 @@
     "nothingForMe": "Rien pour moi"
   },
   "singleModule": {
+    "onlyPdfSupported": "Seuls les fichiers PDF sont actuellement pris en charge.",
     "recommended": "Recommandé",
     "generateModuleFor": "Générer un module pour",
     "energy": "Énergie"
